skeplib/tests/fixtures/sema/invalid/missing_return.sk
fn main() -> Int {
  let x = 1;
}
